✨ feat (App Frontend): Delegation Dashboard for Registration branch: dashboard

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -4,7 +4,6 @@
 	"registerNow": "Jetzt Anmelden",
 	"back": "Zurück",
 	"backToHome": "Zurück zur Homepage",
-	"save": "Speichern",
 	"committee": "Gremium",
 	"noConferenceHeading": "Keine Konferenz",
 	"noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz registriert.",
@@ -33,6 +32,8 @@
 	"individualApplication": "Einzelbewerbung",
 	"individualApplicationDescription": "Hier kannst du dich alleine auf einen Platz ein einer der Speziellen Delegationen wie der Konferenzpresse bewerben.",
 	"supervisor": "Betreuer*in",
+	"supervisors": "Betreuer*innen",
+	"supervisorDelegationDescription": "Betreuer können den Status Ihrer Delegation überwachen. Bitte kontaktieren Sie das Teilnehmerbetreuungsteam, wenn sich Ihrer Delegation unerwartet ein Betreuer angeschlossen hat.",
 	"applyAsSupervisor": "Anmelden als Betreuer*in",
 	"applyAsSupervisorDescription": "Hier kannst du dich als Betreuer*in für eine Delegation anmelden. Als Betreuer*in hast du Einsicht in alle deine Delegationen und kannst sie organisatorisch unterstützen.",
 	"infos": "Infos",
@@ -68,7 +69,8 @@
 	"deleteDelegation": "Delegation löschen",
 	"transferHeadDelegateship": "Delegationsleitung übertragen",
 	"completeSignup": "Anmeldung abschließen",
-	"completeSignupDescription": "Bitte schließe alle Aufgaben ab und bestätige dann deine Anmeldung zur Delegation.",
+	"completeSignupDescriptionHeadDelegate": "Bitte erledigen Sie alle hier aufgeführten Aufgaben. Sobald Sie alle Aufgaben abgeschlossen haben, können Sie die Registrierung abschließen und am Auswahlverfahren teilnehmen. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
+	"completeSignupDescription": "Bitte erledigen Sie alle Aufgaben gemeinsam mit Ihrem Delegationsleitung. Diese*r kann anschließend die Anmeldung abschließen, sodass sie am Auswahlverfahren teilnehmen können. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
 	"completeSignupButton": "Anmeldung verbindlich abschließen und damit am Auswahlverfahren teilnehmen",
 	"conpleteSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
 	"conpleteSignupWarningText": "Du hast zwar bereits eine Delegation erstellt bzw. bist einer Delegation beigetreten, aber die Anmeldung ist noch nicht abgeschlossen. Bitte schließe die Anmeldung rechtzeitig vor Anmeldeschluss ab, sodass wir die Anmeldung deiner Delegation berücksichtigen können.",
@@ -79,6 +81,8 @@
 	"todoAnswerQuestionaireHelp": "Beantworte alle Fragen zu Motivation und Erfahrung, um deine Delegation zu vervollständigen.",
 	"todoEnterDelegationPreferences": "Vertretungswünsche eingeben",
 	"todoEnterDelegationPreferencesHelp": "Geben Sie an, welche Länder oder nichtstaatlichen Akteure Sie vertreten möchten. Sie müssen mindestens 3 Präferenzen angeben.",
+	"todoCompleteSignup": "Anmeldung abschließen",
+	"todoCompleteSignupHelp": "Erledigen Sie alle Aufgaben und klicken Sie anschließend auf den Button unten, um die Anmeldung abzuschließen und am Auswahlverfahren teilzunehmen.",
 	"delegationStatus": "Delegationsstatus",
 	"delegationMembers": "Delegationsmitglieder",
 	"name": "Name",
@@ -133,5 +137,23 @@
 	"userId": "Benutzer-ID",
 	"edit": "Bearbeiten",
 	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
-	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten"
+	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten",
+	"activeMembers": "Aktive Mitglieder",
+	"removeMember": "Mitglied entfernen",
+	"removeMemberConfirmation": "Möchtest du dieses Mitglied wirklich entfernen?",
+	"makeHeadDelegate": "Delegationsleitung übertragen",
+	"leaveDelegationConfirmation": "Möchtest du diese Delegation wirklich verlassen? Du kannst sie ohne den Zutrittscode nicht mehr betreten, wenn du sie verlässt.",
+	"makeHeadDelegateConfirmation": "Möchtest du wirklich die Delegationsleitung an dieses Mitglied übertragen? Du wirst dann zum normalen Delegationsmitglied ohne besondere Rechte.",
+	"deleteDelegationConfirmation": "Möchtest du diese Delegation wirklich löschen? Dies kann nicht rückgängig gemacht werden.",
+	"nationsPool": "Länderpool",
+	"nationsPoolDescription": "Hier sind die Länder aufgelistet, die Ihnen zur Auswahl stehen. Jeder Haken bedeutet, dass das jeweilige Land in dem entsprechenden Gremium einen Sitz hat. Die Spalte am Ende zeigt an, wie viele Delegierte das Land insgesamt auf der Konferenz hat. Sie können kein Land vertreten, dass weniger Plätze hat, als Sie Mitglieder in Ihrer Delegation haben.",
+	"nsaPool": "Nichtstaatliche Akteure",
+	"nsaPoolDescription": "Hier sind die nichtstaatlichen Akteure (NAs) aufgelistet, die Ihnen zur Auswahl stehen. Delegierte von nichtstaatlichen Akteuren sind keinen konkreten Gremien zugeordnet. Dennoch ist auch die Anzahl der Delegierten pro NA begrenzt. Wenn Sie hier keine NA aufgelistet sehen, bedeutet das, dass keine NAs für die Konferenz vorgesehen sind oder die Anzahl der Mitglieder Ihrer Delegation die Anzahl der verfügbaren Plätze übersteigt.",
+	"yourPreferences": "Ihre Auswahl",
+	"yourPreferencesDescription": "Mit den hier aufgelisteten Präferenzen nehmen Sie am Auswahlverfahren teil. Sie können die Reihenfolge der Präferenzen ändern, indem Sie auf die Pfeile klicken. Bitte geben Sie mindestens 3 Präferenzen an.",
+	"noPreferencesSet": "Es wurde noch keine Präferenz festgelegt.",
+	"completeSignupConfirmation": "Möchten Sie die Anmeldung wirklich abschließen? Nach dem Abschluss können Sie keine Änderungen mehr vornehmen.",
+	"completeSignupSuccess": "Anmeldung erfolgreich abgeschlossen",
+	"completeSignupSuccessDescription": "Ihre Anmeldung wurde erfolgreich abgeschlossen. Sie nehmen nun am Auswahlverfahren teil. Das Auswahlverfahren findet nach Ende der Anmeldephase statt und kann einige Zeit in Anspruch nehmen. Sie werden per E-Mail über das Ergebnis informiert. Bitte sehen Sie von Nachfragen ab.",
+	"noDangerZoneOptions": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie die delegation weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung."
 }
