--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,7 +4,6 @@
 	"signupNow": "Sign up Now",
 	"back": "Back",
 	"backToHome": "Back To Home",
-	"save": "Save",
 	"committee": "Committee",
 	"noConferenceHeading": "No Conference",
 	"noConferenceText": "It seems like you did not register for a conference yet.",
@@ -34,6 +33,8 @@
 	"individualApplication": "Individual application",
 	"individualApplicationDescription": "Here you can apply on your own for a place in one of the special delegations such as the conference press.",
 	"supervisor": "Supervisor",
+	"supervisors": "Supervisors",
+	"supervisorDelegationDescription": "Betreuer*innen können den Status Ihrer Delegation überwachen. Bitte kontaktieren Sie die Teilnehmendenbetreuung, wenn sich Ihrer Delegation ein*e Betreuer*in unerwartet angeschlossen hat.",
 	"applyAsSupervisor": "Apply as Supervisor",
 	"applyAsSupervisorDescription": "You can register as a supervisor for a delegation here. As a supervisor, you have access to all your delegations and can provide them with organizational support.",
 	"infos": "Infos",
@@ -91,7 +92,7 @@
 	"vegan": "Vegan",
 	"vegetarian": "Vegetarisch",
 	"omnivore": "Omnivor",
-	"save": "Speichern",
+	"save": "Save",
 	"saveAndContinue": "Speichern und weiter",
 	"loginInformation": "Anmeldeinformationen",
 	"loginName": "Anmeldename",
@@ -108,7 +109,8 @@
 	"deleteDelegation": "Delete Delegation",
 	"transferHeadDelegateship": "Transfer Head Delegateship",
 	"completeSignup": "Complete Registration",
-	"completeSignupDescription": "Please complete all tasks and then confirm your registration for the delegation.",
+	"completeSignupDescriptionHeadDelegate": "Please complete all tasks and then confirm your registration for the delegation. Once you have completed all tasks, the Head Delegate can complete the registration and participate in the selection process. Once the registration is complete, it cannot be changed back – so please make sure that all information is correct and to your delegations satisfaction.",
+	"completeSignupDescription": "Please complete all tasks with your Head Delegate. Afterwards the Head Delegate can confirm the registration for the delegation.",
 	"completeSignupButton": "Complete registration and participate in the selection process",
 	"completeSignupWarningHeading": "Important: Complete Online Registration",
 	"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
@@ -119,6 +121,8 @@
 	"todoAnswerQuestionaireHelp": "Answer all questions about motivation and experience to complete your delegation.",
 	"todoEnterDelegationPreferences": "Enter delegation preferences",
 	"todoEnterDelegationPreferencesHelp": "Indicate which countries or non-state actors you wish to represent. You must specify at least 3 preferences.",
+	"todoCompleteSignup": "Complete Registration",
+	"todoCompleteSignupHelp": "Complete all tasks and then click the button below to finalize your registration and participate in the selection process.",
 	"delegationStatus": "Delegation Status",
 	"delegationMembers": "Delegation Members",
 	"name": "Name",
@@ -133,5 +137,23 @@
 	"changeDelegationPreferences": "Change Preferences",
 	"delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
 	"noMembersFound": "No delegation members found",
-	"noRoleApplications": "No role applications yet"
+	"noRoleApplications": "No role applications yet",
+	"activeMembers": "Active members",
+	"removeMember": "Remove member",
+	"removeMemberConfirmation": "Are you sure you want to remove this member from the delegation?",
+	"makeHeadDelegate": "Make Head Delegate",
+	"makeHeadDelegateConfirmation": "Are you sure you want to make this member the head delegate of the delegation? You will be demoted to a regular member.",
+	"leaveDelegationConfirmation": "Are you sure you want to leave this delegation? You will no longer be able to rejoin without the delegation code.",
+	"deleteDelegationConfirmation": "Are you sure you want to delete this delegation? This action cannot be undone.",
+	"nationsPool": "Nations Pool",
+	"nationsPoolDescription": "Here are the countries listed that are available for you to choose from. Each checkmark indicates that the respective country has a seat in the corresponding body. The column at the end shows how many delegates the country has in total at the conference. You cannot represent a country that has fewer seats than you have members in your delegation.",
+	"nsaPool": "Non-State Actors",
+	"nsaPoolDescription": "Here are the non-state actors (NSAs) listed that are available for you to choose from. Delegates from non-state actors are not assigned to specific bodies. However, the number of delegates per NSA is also limited. If you do not see any NSA listed here, it means that no NSAs are allocated for the conference or the number of members in your delegation exceeds the number of available seats.",
+	"yourPreferences": "Your Preferences",
+	"yourPreferencesDescription": "By specifying the preferences listed here, you participate in the selection process. You can change the order of the preferences by clicking on the arrows. Please provide at least 3 preferences.",
+	"noPreferencesSet": "No preferences has been set yet",
+	"completeSignupConfirmation": "Do you really want to complete the registration? Once completed, you will not be able to make any changes.",
+	"completeSignupSuccess": "Registration Successfully Completed",
+	"completeSignupSuccessDescription": "Your registration has been successfully completed. You are now participating in the selection process. The selection process will take place after the registration phase ends and may take some time. You will be informed of the results via email. Please refrain from making inquiries.",
+	"noDangerZoneOptions": "Since you already completed the registration, you can neither leave nor delete the delegation. If you experience any trouble, please contact the participant care"
 }
