--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,6 @@
 {
 	"$schema": "https://inlang.com/schema/inlang-message-format",
 	"signup": "Sign up",
-	"signupNow": "Sign up Now",
 	"back": "Back",
 	"backToHome": "Back To Home",
 	"committee": "Committee",
@@ -32,10 +31,10 @@
 	"joinDelegationDescription": "Here you can join a delegation with a code issued to you by the head of delegation.",
 	"individualApplication": "Individual application",
 	"individualApplicationDescription": "Here you can apply on your own for a place in one of the special delegations such as the conference press.",
+	"individualApplicationDescription2": "Hier können Sie sich als Einzelperson für spezielle Rollen bewerben. Diese Rollen sind nicht an eine Delegation gebunden. Wenn Sie nicht für die Rolle genommen werden, werden wir mit Ihnen Kontakt aufnehmen und eine andere Rolle vorschlagen.",
 	"supervisor": "Supervisor",
 	"supervisors": "Supervisors",
 	"supervisorDelegationDescription": "Betreuer*innen können den Status Ihrer Delegation überwachen. Bitte kontaktieren Sie die Teilnehmendenbetreuung, wenn sich Ihrer Delegation ein*e Betreuer*in unerwartet angeschlossen hat.",
-	"individualApplicationDescription2": "Hier können Sie sich als Einzelperson für spezielle Rollen bewerben. Diese Rollen sind nicht an eine Delegation gebunden. Wenn Sie nicht für die Rolle genommen werden, werden wir mit Ihnen Kontakt aufnehmen und eine andere Rolle vorschlagen.",
 	"applyAsSupervisor": "Apply as Supervisor",
 	"applyAsSupervisorDescription": "You can register as a supervisor for a delegation here. As a supervisor, you have access to all your delegations and can provide them with organizational support.",
 	"infos": "Infos",
@@ -65,6 +64,38 @@
 	"pleaseCheckDelegation": "Überprüfe die Angaben und bestätige den Beitritt zur Delegation.",
 	"confirm": "Bestätigen",
 	"headDelegate": "Delegationsleiter*in",
+	"dangerZone": "Danger Zone",
+	"leaveDelegation": "Leave Delegation",
+	"deleteDelegation": "Delete Delegation",
+	"transferHeadDelegateship": "Transfer Head Delegateship",
+	"completeSignup": "Complete Registration",
+	"completeSignupDescriptionHeadDelegate": "Please complete all tasks and then confirm your registration for the delegation. Once you have completed all tasks, the Head Delegate can complete the registration and participate in the selection process. Once the registration is complete, it cannot be changed back – so please make sure that all information is correct and to your delegations satisfaction.",
+	"completeSignupDescription": "Please complete all tasks with your Head Delegate. Afterwards the Head Delegate can confirm the registration for the delegation.",
+	"completeSignupButton": "Complete registration and participate in the selection process",
+	"todoCreateDelegation": "Create delegation",
+	"todoInvitePeople": "Invite people",
+	"todoInvitePeopleHelp": "Invite additional members to your delegation. The minimum required number of members is 2.",
+	"todoAnswerQuestionaire": "Answer questionnaire",
+	"todoAnswerQuestionaireHelp": "Answer all questions about motivation and experience to complete your delegation.",
+	"todoEnterDelegationPreferences": "Enter delegation preferences",
+	"todoEnterDelegationPreferencesHelp": "Indicate which countries or non-state actors you wish to represent. You must specify at least 3 preferences.",
+	"todoCompleteSignup": "Complete Registration",
+	"todoCompleteSignupHelp": "Complete all tasks and then click the button below to finalize your registration and participate in the selection process.",
+	"delegationStatus": "Delegation Status",
+	"delegationMembers": "Delegation Members",
+	"name": "Name",
+	"application": "Application",
+	"informationAndMotivation": "Information and Motivation",
+	"informationAndMotivationDescriptionHeadDelegate": "Here you can edit the Information and Motivation required for the Application.",
+	"informationAndMotivationDescriptionMember": "Here you can see the Information and Motivation for the Application. Only the Head Delegate can edit this information.",
+	"delegationPreferences": "Delegation Preferences",
+	"delegationPreferencesDescriptionHeadDelegate": "Here you can edit the delegation preferences for your delegation.",
+	"delegationPreferencesDescriptionMember": "Here you can see the delegation preferences for your delegation. Only the Head Delegate can edit this information.",
+	"setDelegationPreferences": "Set Preferences",
+	"changeDelegationPreferences": "Change Preferences",
+	"delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
+	"noMembersFound": "No delegation members found",
+	"noRoleApplications": "No role applications yet",
 	"amountOfDelegates": "Anzahl der Delegationsmitglieder",
 	"signupForSupervisors": "Anmeldung für Betreuer*innen",
 	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen.",
@@ -105,46 +136,12 @@
 	"edit": "Bearbeiten",
 	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
 	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten",
-	"dangerZone": "Danger Zone",
-	"leaveDelegation": "Leave Delegation",
-	"deleteDelegation": "Delete Delegation",
-	"transferHeadDelegateship": "Transfer Head Delegateship",
-	"completeSignup": "Complete Registration",
-	"completeSignupDescriptionHeadDelegate": "Please complete all tasks and then confirm your registration for the delegation. Once you have completed all tasks, the Head Delegate can complete the registration and participate in the selection process. Once the registration is complete, it cannot be changed back – so please make sure that all information is correct and to your delegations satisfaction.",
-	"completeSignupDescription": "Please complete all tasks with your Head Delegate. Afterwards the Head Delegate can confirm the registration for the delegation.",
-	"completeSignupButton": "Complete registration and participate in the selection process",
-	"completeSignupWarningHeading": "Important: Complete Online Registration",
-	"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
-	"todoCreateDelegation": "Create delegation",
-	"todoInvitePeople": "Invite people",
-	"todoInvitePeopleHelp": "Invite additional members to your delegation. The minimum required number of members is 2.",
-	"todoAnswerQuestionaire": "Answer questionnaire",
-	"todoAnswerQuestionaireHelp": "Answer all questions about motivation and experience to complete your delegation.",
-	"todoEnterDelegationPreferences": "Enter delegation preferences",
-	"todoEnterDelegationPreferencesHelp": "Indicate which countries or non-state actors you wish to represent. You must specify at least 3 preferences.",
-	"todoCompleteSignup": "Complete Registration",
-	"todoCompleteSignupHelp": "Complete all tasks and then click the button below to finalize your registration and participate in the selection process.",
-	"delegationStatus": "Delegation Status",
-	"delegationMembers": "Delegation Members",
-	"name": "Name",
-	"application": "Application",
-	"informationAndMotivation": "Information and Motivation",
-	"informationAndMotivationDescriptionHeadDelegate": "Here you can edit the Information and Motivation required for the Application.",
-	"informationAndMotivationDescriptionMember": "Here you can see the Information and Motivation for the Application. Only the Head Delegate can edit this information.",
-	"delegationPreferences": "Delegation Preferences",
-	"delegationPreferencesDescriptionHeadDelegate": "Here you can edit the delegation preferences for your delegation.",
-	"delegationPreferencesDescriptionMember": "Here you can see the delegation preferences for your delegation. Only the Head Delegate can edit this information.",
-	"setDelegationPreferences": "Set Preferences",
-	"changeDelegationPreferences": "Change Preferences",
-	"delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
-	"noMembersFound": "No delegation members found",
-	"noRoleApplications": "No role applications yet",
 	"activeMembers": "Active members",
 	"removeMember": "Remove member",
 	"removeMemberConfirmation": "Are you sure you want to remove this member from the delegation?",
 	"makeHeadDelegate": "Make Head Delegate",
-	"makeHeadDelegateConfirmation": "Are you sure you want to make this member the head delegate of the delegation? You will be demoted to a regular member.",
 	"leaveDelegationConfirmation": "Are you sure you want to leave this delegation? You will no longer be able to rejoin without the delegation code.",
+	"makeHeadDelegateConfirmation": "Are you sure you want to make this member the head delegate of the delegation? You will be demoted to a regular member.",
 	"deleteDelegationConfirmation": "Are you sure you want to delete this delegation? This action cannot be undone.",
 	"nationsPool": "Nations Pool",
 	"nationsPoolDescription": "Here are the countries listed that are available for you to choose from. Each checkmark indicates that the respective country has a seat in the corresponding body. The column at the end shows how many delegates the country has in total at the conference. You cannot represent a country that has fewer seats than you have members in your delegation.",
@@ -168,5 +165,8 @@
 	"location": "Location",
 	"pickIcon": "Icon auswählen",
 	"search": "Suche",
-	"submit": "Senden"
+	"submit": "Senden",
+	"signupNow": "Sign up Now",
+	"completeSignupWarningHeading": "Important: Complete Online Registration",
+	"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration."
 }
