✨ feat (App Frontend): wip branch: dashboard

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -171,5 +171,10 @@
 	"submit": "Senden",
 	"signupNow": "Sign up Now",
 	"completeSignupWarningHeading": "Important: Complete Online Registration",
-	"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration."
+	"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
+	"overview": "Übersicht",
+	"members": "Members",
+	"inTheDelegation": "in the delegation",
+	"tasks": "Tasks",
+	"done to register": "done to register"
 }
