--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -171,5 +171,10 @@
 	"submit": "Senden",
 	"signupNow": "Jetzt Anmelden",
 	"completeSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
-	"completeSignupWarningText": "Obwohl Sie bereits eine Delegation angelegt haben oder einer beigetreten sind, ist die Registrierung noch nicht abgeschlossen. Bitte schließen Sie Ihre Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir die Anmeldung Ihrer Delegation im Auswahlverfahren berücksichtigen können."
+	"completeSignupWarningText": "Obwohl Sie bereits eine Delegation angelegt haben oder einer beigetreten sind, ist die Registrierung noch nicht abgeschlossen. Bitte schließen Sie Ihre Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir die Anmeldung Ihrer Delegation im Auswahlverfahren berücksichtigen können.",
+	"overview": "Übersicht",
+	"members": "Mitglieder",
+	"inTheDelegation": "in der Delegation",
+	"tasks": "Aufgaben",
+	"done to register": "für Anmeldung erledigt"
 }
