✨ feat (App Frontend): Feedback links, alerts, i18n improvements branch: main

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -15,7 +15,11 @@
 	"homeYourConferences": "Ihre Konferenzen",
 	"homeYourConferencesSub": "Sehen Sie sich die Konferenzen an, an denen Sie teilnehmen",
 	"homeYourConferencesBtn": "Zum Dashboard",
-	"homeDraftDisclaimer": "Diese Seite befindet sich noch im Aufbauprozess und hat keinerlei Funktionalität. Sie dient lediglich als konzeptioneller Entwurf.",
+	"homeDraftDisclaimerHeader": "Seite im Aufbau",
+	"homeDraftDisclaimer": "Diese Seite befindet sich noch im Aufbauprozess. Bitte haben Sie Verständnis, dass einerseits noch nicht alle Funktionen verfügbar sind und es außerdem zu Fehlern kommen kann. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Anwendung weiter aufzubauen.",
+	"homeDraftPleaseHelp": "Um Ihnen das beste Erlebnis zu bereiten, sind wir auf Ihre Hilfe angewiesen: Wenn Sie einen Vorschlag haben oder Ihnen ein Bug, Problem oder Fehler auffällt, dann melden Sie dies gerne über unser Feedback-Board.",
+	"homeHelpWithTechnicalIssuesHeadline": "Hilfe bei technischen Problemen",
+	"homeHelpWithTechnicalIssues": "Wenn Sie technische Probleme haben, helfen wir Ihnen gerne auch persönlich weiter. Wenden Sie sich dafür entweder an die Teilnehmendenbetreuung des jeweiligen Projektes oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Unsere Konferenzen",
 	"homeAboutUs": "Über uns",
 	"homeAboutUsText": "DMUN ist ein gemeinnütziger Verein von jungen Erwachsenen, die sich für internationale Politik und die Vereinten Nationen begeistern. Wir sind bundesweit und auf internationaler Ebene im Bereich der politischen Jugendbildung und des Youth Empowerments tätig. 2003 gegründet, und seit 2012 als Nichtregierungsorganisation mit speziellem Beraterstatus beim Wirtschafts- und Sozialrat der Vereinten Nationen sowie beim UNDPI akkreditiert, veranstalten wir politische Planspiele, bei denen Jugendliche und junge Erwachsene zwischen 15 und 21 Jahren eine Konferenz der Vereinten Nationen simulieren. Außerdem setzen wir uns auf internationaler Ebene für politische Jugendbildung und die Partizipation junger Menschen an politischen Prozessen ein.",
@@ -32,7 +36,7 @@
 	"enterCode": "Code eingeben",
 	"joinDelegationDescription": "Hier kannst du einer Delegation mit einem Code beitreten, den dir der/die Delegationsleiter*in ausgestellt hat.",
 	"individualApplication": "Einzelbewerbung",
-	"individualApplicationDescription": "Hier kannst du dich alleine auf einen Platz ein einer der Speziellen Delegationen wie der Konferenzpresse bewerben.",
+	"individualApplicationDescription": "Hier kannst du dich alleine auf einen Platz in einer besonderen Rolle – wie der Konferenzpresse – bewerben.",
 	"individualApplicationDescription2": "Hier können Sie sich als Einzelperson für spezielle Rollen bewerben. Diese Rollen sind nicht an eine Delegation gebunden. Wenn Sie nicht für die Rolle genommen werden, werden wir mit Ihnen Kontakt aufnehmen und eine andere Rolle vorschlagen.",
 	"supervisor": "Betreuer*in",
 	"supervisors": "Betreuer*innen",
@@ -160,6 +164,8 @@
 	"noDangerZoneOptions": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie die delegation weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
 	"profileSettings": "Profilverwaltung",
 	"logout": "Logout",
+	"feedback": "Feedback",
+	"feedbackBoard": "Feedback-Board",
 	"activeConferences": "Aktive Konferenzen",
 	"upcomingConferences": "Kommende Konferenzen",
 	"pastConferences": "Vergangene Konferenzen",
