--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,7 +15,11 @@
 	"homeYourConferences": "Your conferences",
 	"homeYourConferencesSub": "View the conferences you are attending",
 	"homeYourConferencesBtn": "To the dashboard",
-	"homeDraftDisclaimer": "This page is still under construction and has no functionality. It only serves as a conceptual design.",
+	"homeDraftDisclaimerHeader": "Page Under Construction",
+	"homeDraftDisclaimer": "This page is still in the process of being developed. Please understand that not all features are available yet and that there may be errors. We are working hard in our spare time to further develop the application.",
+	"homeDraftPleaseHelp": "To provide you with the best experience, we rely on your help: If you have a suggestion or notice a bug, problem, or error, please report it through our feedback board.",
+	"homeHelpWithTechnicalIssuesHeadline": "Help with Technical Issues",
+	"homeHelpWithTechnicalIssues": "If you are experiencing technical issues, feel free to contact us. We are happy to assist you personally as well. Please reach out to the participant support of the respective project or send an email to <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Our conferences",
 	"homeAboutUs": "About us",
 	"homeAboutUsText": "DMUN is a non-profit organization of young adults who are passionate about international politics and the United Nations. We are active nationwide and internationally in the field of political youth education and youth empowerment. Founded in 2003 and accredited as a non-governmental organization with special consultative status with the United Nations Economic and Social Council and UNDPI since 2012, we organize political simulation games in which teenagers and young adults between the ages of 15 and 21 simulate a United Nations conference. We also promote political youth education and the participation of young people in political processes at an international level.",
@@ -160,6 +164,8 @@
 	"noDangerZoneOptions": "Since you already completed the registration, you can neither leave nor delete the delegation. If you experience any trouble, please contact the participant care",
 	"profileSettings": "Profile Settings",
 	"logout": "Logout",
+	"feedback": "Feedback",
+	"feedbackBoard": "Feedback Board",
 	"activeConferences": "Active Conferences",
 	"upcomingConferences": "Upcoming Conferences",
 	"pastConferences": "Past Conferences",
