⬆️ improvement (App Frontend): Pronouns are now prefilled when binary genders are selected branch: 14-pronouns-field-should-be-prefilled-with-hehim-or-sheher-when-male-or-female-is-selected-as-gender

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -196,5 +196,7 @@
 	"willNotBePresentAtConference": "Ich werde <strong><u>nicht</u></strong> an der Konferenz teilnehmen.",
 	"presentAtConference": "Anwesend auf der Konferenz",
 	"registeredAsSupervisor": "Sie sind als Betreuer*in angemeldet und können hier den Status ihrer Delegationen überwachen. Wenn Sie weitere Delegationen hinzufügen möchten, folgen Sie einfach erneut dem Anmeldeprozess.",
-	"addAnotherDelegation": "Weitere Delegation hinzufügen"
+	"addAnotherDelegation": "Weitere Delegation hinzufügen",
+	"pronounsHeHim": "er/ihm",
+	"pronounsSheHer": "sie/ihr"
 }
